--- a/公開映画スケジュール.ipynb
+++ b/公開映画スケジュール.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPC+EXkIRFItsR78Ua2NS87",
+      "authorship_tag": "ABX9TyNI0w+aw+d0QD34vxgAlFED",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "### カスタム情報\n",
         "#############################\n",
         "# 読み書き対象スプレッドシートID\n",
-        "ssID='xxxxxxs'\n",
+        "ssID='11HxD-a2Sq8DXPEEiVfZmNtEqkdOxJKZckPRkkT0GOJY'\n",
         "# 読み書き対象スプレッドシート シート名\n",
         "sheetName='上映中'\n",
         "# データ表が始まる行\n",
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "Oip1n97WUP_0"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -75,41 +75,132 @@
       "metadata": {
         "id": "qN-HFCiOZRFK"
       },
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
         "def getMoviesFromEiga(url, path):\n",
         "  # パースしたHTMLから特定の要素を抽出します。結果はリストで返ってきます。\n",
         "  movies = select(url + path, \"main .content-container section[data-title]\")\n",
-        "  obj = list(map(lambda movie: {\n",
+        "  obj = []\n",
+        "  print(\"*********************************************\")\n",
+        "  print(f'GET INFO from {path}')\n",
+        "\n",
+        "  for movie in filter(lambda m: len(m.select(\"h2 a\")) > 0,movies):\n",
+        "    print(f'TRY {movie[\"data-title\"]}')\n",
+        "    m = {\n",
         "      \"name\": movie[\"data-title\"],\n",
         "      \"schedules\": list(map(lambda t: {\n",
         "          \"type\": t.select(\".movie-type\")[0].get_text(\"/\") if len(t.select(\".movie-type\")) > 0 else \"\",\n",
         "          \"date\": list(map(lambda d: d[\"data-time\"], t.select(\"td [data-time]\"))),\n",
         "      }, movie.select(\".movie-schedule\"))),\n",
-        "      \"image\": movie.select(\".movie-image img\")[0][\"src\"] if len(movie.select(\".movie-image img\")) > 0 else None,\n",
-        "      \"time\": list(filter(lambda s: s.get_text().endswith(\"分\"), movie.select(\".movie-image .data span\")))[0].get_text().replace(\"分\", \"\"),\n",
-        "      \"link\": baseURL + movie.select(\"h2 a\")[0][\"href\"],\n",
-        "    }, movies))\n",
+        "      \"time\": \"0\",\n",
+        "    }\n",
+        "\n",
+        "    if len(movie.select(\".movie-image img\")) > 0:\n",
+        "      m[\"image\"] = movie.select(\".movie-image img\")[0][\"src\"]\n",
+        "\n",
+        "    for i in movie.select(\".movie-image .data span\"):\n",
+        "      timeResult = re.match(\"(\\d+)[分]*\", i.get_text().strip())\n",
+        "      if  timeResult:\n",
+        "        m[\"time\"] = timeResult.group(1)\n",
+        "      \n",
+        "    if len(movie.select(\"h2 a\")) > 0:\n",
+        "      m[\"link\"] = baseURL + movie.select(\"h2 a\")[0][\"href\"]\n",
+        "\n",
+        "    obj.append(m)\n",
         "  \n",
         "  return obj\n"
       ],
       "metadata": {
         "id": "bDGgyls1rZid"
       },
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 16,
       "metadata": {
-        "id": "A5nrrXSyp6JG"
+        "id": "A5nrrXSyp6JG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27a1ce4b-8194-4c59-c0d2-be8d0843d7b7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*********************************************\n",
+            "GET INFO from /100101/3229/\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY そして僕は途方に暮れる\n",
+            "TRY JSB3 LIVE FILM RISING SOUND\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY すずめの戸締まり\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 非常宣言\n",
+            "TRY かがみの孤城\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "TRY ブラックナイトパレード\n",
+            "TRY 嘘八百　なにわ夢の陣\n",
+            "TRY ONE PIECE FILM RED\n",
+            "TRY トップガン　マーヴェリック\n",
+            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "TRY かぐや様は告らせたい　ファーストキッスは終わらない\n",
+            "*********************************************\n",
+            "GET INFO from /100201/3230/\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY そして僕は途方に暮れる\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY すずめの戸締まり\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 非常宣言\n",
+            "TRY 月の満ち欠け\n",
+            "TRY ブラックナイトパレード\n",
+            "TRY ONE PIECE FILM RED\n",
+            "TRY RRR\n",
+            "TRY 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
+            "TRY 中島みゆき　劇場版　ライヴ・ヒストリー2\n",
+            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "*********************************************\n",
+            "GET INFO from /100201/3231/\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY そして僕は途方に暮れる\n",
+            "TRY JSB3 LIVE FILM RISING SOUND\n",
+            "TRY ひみつのなっちゃん。\n",
+            "TRY ゲキ×シネ「神州無頼街」\n",
+            "TRY 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY すずめの戸締まり\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 非常宣言\n",
+            "TRY かがみの孤城\n",
+            "TRY 月の満ち欠け\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "TRY ブラックナイトパレード\n",
+            "TRY ファミリア\n",
+            "TRY ONE PIECE FILM RED\n",
+            "TRY ホイットニー・ヒューストン I WANNA DANCE WITH SOMEBODY\n",
+            "TRY 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
+            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "TRY Dream Collaboration Festival ドリコラFes. アイカツ！シリーズ＆プリティーシリーズ\n",
+            "TRY 劇場版　うたの☆プリンスさまっ♪　マジLOVEスターリッシュツアーズ\n"
+          ]
+        }
+      ],
       "source": [
         "#import json\n",
         "\n",
@@ -135,7 +226,7 @@
       "metadata": {
         "id": "NxJZ7zXMUmTq"
       },
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -152,7 +243,12 @@
         "row = rowStart\n",
         "# 日時１つを１行として書き込み\n",
         "for theater in theaters:\n",
+        "  print(\"*********************************************\")\n",
+        "  print(f'THEATER: {theater[\"name\"]}')\n",
+        "\n",
         "  for movie in theater[\"movies\"]:\n",
+        "    print(f'MOVIE: {movie[\"name\"]}')\n",
+        "\n",
         "    for schedule in movie[\"schedules\"]:\n",
         "      for d in schedule[\"date\"]:\n",
         "        dt = datetime.datetime.fromtimestamp(int(d), datetime.timezone.utc)\n",
@@ -182,10 +278,82 @@
         "        row = row + 1\n"
       ],
       "metadata": {
-        "id": "GDn6Jr9GU46I"
+        "id": "GDn6Jr9GU46I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "208a08f4-e532-4d79-e61e-f088b69749f0"
       },
-      "execution_count": 33,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*********************************************\n",
+            "THEATER: ユナイテッド・シネマ 前橋\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: そして僕は途方に暮れる\n",
+            "MOVIE: JSB3 LIVE FILM RISING SOUND\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 非常宣言\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "MOVIE: ブラックナイトパレード\n",
+            "MOVIE: 嘘八百　なにわ夢の陣\n",
+            "MOVIE: ONE PIECE FILM RED\n",
+            "MOVIE: トップガン　マーヴェリック\n",
+            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "MOVIE: かぐや様は告らせたい　ファーストキッスは終わらない\n",
+            "*********************************************\n",
+            "THEATER: 109シネマズ高崎\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: そして僕は途方に暮れる\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 非常宣言\n",
+            "MOVIE: 月の満ち欠け\n",
+            "MOVIE: ブラックナイトパレード\n",
+            "MOVIE: ONE PIECE FILM RED\n",
+            "MOVIE: RRR\n",
+            "MOVIE: 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
+            "MOVIE: 中島みゆき　劇場版　ライヴ・ヒストリー2\n",
+            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "*********************************************\n",
+            "THEATER: イオンシネマ高崎\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: そして僕は途方に暮れる\n",
+            "MOVIE: JSB3 LIVE FILM RISING SOUND\n",
+            "MOVIE: ひみつのなっちゃん。\n",
+            "MOVIE: ゲキ×シネ「神州無頼街」\n",
+            "MOVIE: 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 非常宣言\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: 月の満ち欠け\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "MOVIE: ブラックナイトパレード\n",
+            "MOVIE: ファミリア\n",
+            "MOVIE: ONE PIECE FILM RED\n",
+            "MOVIE: ホイットニー・ヒューストン I WANNA DANCE WITH SOMEBODY\n",
+            "MOVIE: 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
+            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
+            "MOVIE: Dream Collaboration Festival ドリコラFes. アイカツ！シリーズ＆プリティーシリーズ\n",
+            "MOVIE: 劇場版　うたの☆プリンスさまっ♪　マジLOVEスターリッシュツアーズ\n"
+          ]
+        }
+      ]
     }
   ]
 }
