Colaboratory を使用して作成しました

--- a/映画情報検索.ipynb
+++ b/映画情報検索.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCUmgLD258qkZ+5D0XR8n4",
+      "authorship_tag": "ABX9TyNu4P4mX8UMZMzWWpcMwlTg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "2llm33Kluldm"
       },
@@ -38,7 +38,7 @@
         "### カスタム情報\n",
         "#############################\n",
         "# 読み書き対象スプレッドシートID\n",
-        "ssID='xxxxxxxxx'\n",
+        "ssID='11HxD-a2Sq8DXPEEiVfZmNtEqkdOxJKZckPRkkT0GOJY'\n",
         "# 読み書き対象スプレッドシート シート名\n",
         "sheetName='データ'\n",
         "# データ表が始まる行の上の文字\n",
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "ZfnSMF-Zu-ul"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,6 +78,8 @@
         "\n",
         "# 映画名で検索\n",
         "def searchMovie(movieName):\n",
+        "  # 検索用の補正\n",
+        "  movieName = movieName.replace(\".\", \" \")\n",
         "  result = select(f'{baseURL}/search/{urllib.parse.quote(movieName)}/', \"#rslt-movie ul a\")\n",
         "  # ID（を含むリンク）を取得\n",
         "  movieIds = list(map(lambda html: [html.select(\"p[class='title']\")[0].get_text(), html.get('href')], result))\n",
@@ -88,7 +90,7 @@
         "    print(f'★★★注意★★★　[{movieName}]という映画で複数ヒットしました。最初にヒットした情報を設定します（候補：{\", \".join(map(lambda l: l[0], movieIds))}）★★★')\n",
         "\n",
         "  movieHtml = select(f'{baseURL}{movieIds[0][1]}', \"main\")[0]\n",
-        "  images = movieHtml.select(\".hero-img img\")\n",
+        "  images = movieHtml.select(\".icon-movie-poster img\")\n",
         "  infos = movieHtml.select(\".movie-details .data\")\n",
         "  directors = movieHtml.select(\".movie-staff [itemprop='director']\")\n",
         "  casts = movieHtml.select(\".movie-cast .person [itemprop='name']\")\n",
@@ -96,7 +98,7 @@
         "  return {\n",
         "      'name':movieIds[0][0],\n",
         "      'image':images[0][\"src\"] if len(images) > 0 else \"\",\n",
-        "      'info':infos[0].get_text() if len(infos) > 0 else \"\",\n",
+        "      'info':infos[0].get_text(\", \") if len(infos) > 0 else \"\",\n",
         "      'director':directors[0].get_text() if len(directors) > 0 else \"\",\n",
         "      'casts':list(map(lambda html:html.get_text(), casts))[:2]\n",
         "  }\n"
@@ -104,7 +106,7 @@
       "metadata": {
         "id": "7sbqw637v8DL"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +123,7 @@
       "metadata": {
         "id": "yBM1RDjJ-RTn"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,10 +170,29 @@
         "  sheet.update_cell(row, 3, movieInfo[\"image\"])\n"
       ],
       "metadata": {
-        "id": "WlYt9wHz-U-H"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WlYt9wHz-U-H",
+        "outputId": "bedb7cd5-50a5-42e0-d325-4e2a780cbe7d"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[情報] \"映画　イチケイのカラス\"はB列が空ではないのでスキップ\n",
+            "[情報] \"SLAM DUNK\"はB列が空ではないのでスキップ\n",
+            "[情報] \"Dr.コトー診療所\"で検索開始\n",
+            "  →\"Dr.コトー診療所\"で更新開始\n",
+            "[情報] \"名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\"で検索開始\n",
+            "  →\"名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\"で更新開始\n",
+            "[情報] \"RRR\"で検索開始\n",
+            "  →\"RRR\"で更新開始\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
