シート名変更 映画館

--- a/公開映画スケジュール.ipynb
+++ b/公開映画スケジュール.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNI0w+aw+d0QD34vxgAlFED",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,6 +12,164 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oip1n97WUP_0",
+        "outputId": "53521ee4-0629-4754-87db-e6fb1495af2e"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*********************************************\n",
+            "GET INFO from /100101/3229/\n",
+            "TRY エンパイア・オブ・ライト\n",
+            "TRY 湯道\n",
+            "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "TRY レジェンド＆バタフライ\n",
+            "TRY BTS: Yet To Come in Cinemas\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 金の国　水の国\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY すずめの戸締まり\n",
+            "TRY イニシェリン島の精霊\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY かがみの孤城\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY バビロン\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "TRY #マンホール\n",
+            "TRY 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
+            "TRY シャイロックの子供たち\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
+            "TRY BLUE GIANT\n",
+            "TRY 映画　佐々木と宮野　卒業編\n",
+            "TRY 平野と鍵浦\n",
+            "*********************************************\n",
+            "GET INFO from /100201/3230/\n",
+            "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "TRY レジェンド＆バタフライ\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY RRR\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 金の国　水の国\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY すずめの戸締まり\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY かがみの孤城\n",
+            "TRY タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
+            "TRY シャイロックの子供たち\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
+            "TRY かぐや様は告らせたい　ファーストキッスは終わらない\n",
+            "TRY 別れる決心\n",
+            "*********************************************\n",
+            "GET INFO from /100201/3231/\n",
+            "TRY ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
+            "TRY エンパイア・オブ・ライト\n",
+            "TRY 湯道\n",
+            "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "TRY レジェンド＆バタフライ\n",
+            "TRY BTS: Yet To Come in Cinemas\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY 仕掛人・藤枝梅安\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY 金の国　水の国\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY すずめの戸締まり\n",
+            "TRY イニシェリン島の精霊\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY かがみの孤城\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY スクロール\n",
+            "TRY タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
+            "TRY バビロン\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "TRY エゴイスト\n",
+            "TRY #マンホール\n",
+            "TRY アイカツ！ 10th STORY 未来へのSTARWAY\n",
+            "TRY シャイロックの子供たち\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
+            "TRY 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
+            "TRY BLUE GIANT\n",
+            "*********************************************\n",
+            "*** THEATER: ユナイテッド・シネマ 前橋 ***\n",
+            "MOVIE: エンパイア・オブ・ライト\n",
+            "MOVIE: 湯道\n",
+            "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "MOVIE: レジェンド＆バタフライ\n",
+            "MOVIE: BTS: Yet To Come in Cinemas\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 金の国　水の国\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: イニシェリン島の精霊\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: バビロン\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "MOVIE: #マンホール\n",
+            "MOVIE: 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
+            "MOVIE: シャイロックの子供たち\n",
+            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
+            "MOVIE: BLUE GIANT\n",
+            "MOVIE: 映画　佐々木と宮野　卒業編\n",
+            "MOVIE: 平野と鍵浦\n",
+            "*********************************************\n",
+            "*** THEATER: 109シネマズ高崎 ***\n",
+            "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "MOVIE: レジェンド＆バタフライ\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: RRR\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 金の国　水の国\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
+            "MOVIE: シャイロックの子供たち\n",
+            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
+            "MOVIE: かぐや様は告らせたい　ファーストキッスは終わらない\n",
+            "MOVIE: 別れる決心\n",
+            "*********************************************\n",
+            "*** THEATER: イオンシネマ高崎 ***\n",
+            "MOVIE: ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
+            "MOVIE: エンパイア・オブ・ライト\n",
+            "MOVIE: 湯道\n",
+            "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
+            "MOVIE: レジェンド＆バタフライ\n",
+            "MOVIE: BTS: Yet To Come in Cinemas\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: 仕掛人・藤枝梅安\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: 金の国　水の国\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: イニシェリン島の精霊\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: スクロール\n",
+            "MOVIE: タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
+            "MOVIE: バビロン\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "MOVIE: エゴイスト\n",
+            "MOVIE: #マンホール\n",
+            "MOVIE: アイカツ！ 10th STORY 未来へのSTARWAY\n",
+            "MOVIE: シャイロックの子供たち\n",
+            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
+            "MOVIE: 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
+            "MOVIE: BLUE GIANT\n"
+          ]
+        }
+      ],
       "source": [
         "#############################\n",
         "### カスタム情報\n",
@@ -35,7 +177,7 @@
         "# 読み書き対象スプレッドシートID\n",
         "ssID='11HxD-a2Sq8DXPEEiVfZmNtEqkdOxJKZckPRkkT0GOJY'\n",
         "# 読み書き対象スプレッドシート シート名\n",
-        "sheetName='上映中'\n",
+        "sheetName='映画館'\n",
         "# データ表が始まる行\n",
         "rowStart=2\n",
         "\n",
@@ -47,17 +189,9 @@
         "    \"ユナイテッド・シネマ 前橋\": \"/100101/3229/\",\n",
         "    \"109シネマズ高崎\": \"/100201/3230/\",\n",
         "    \"イオンシネマ高崎\": \"/100201/3231/\",\n",
-        "}\n"
-      ],
-      "metadata": {
-        "id": "Oip1n97WUP_0"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "}\n",
+        "\n",
+        "\n",
         "import requests\n",
         "import re\n",
         "\n",
@@ -70,17 +204,9 @@
         "  # パースしたHTMLから特定の要素を抽出します。結果はリストで返ってきます。\n",
         "  elem = soup.select(selector)\n",
         "\n",
-        "  return elem"
-      ],
-      "metadata": {
-        "id": "qN-HFCiOZRFK"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "  return elem\n",
+        "\n",
+        "\n",
         "import re\n",
         "\n",
         "def getMoviesFromEiga(url, path):\n",
@@ -114,94 +240,9 @@
         "\n",
         "    obj.append(m)\n",
         "  \n",
-        "  return obj\n"
-      ],
-      "metadata": {
-        "id": "bDGgyls1rZid"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "A5nrrXSyp6JG",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "27a1ce4b-8194-4c59-c0d2-be8d0843d7b7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "*********************************************\n",
-            "GET INFO from /100101/3229/\n",
-            "TRY 映画　イチケイのカラス\n",
-            "TRY そして僕は途方に暮れる\n",
-            "TRY JSB3 LIVE FILM RISING SOUND\n",
-            "TRY THE FIRST SLAM DUNK\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
-            "TRY Dr.コトー診療所\n",
-            "TRY すずめの戸締まり\n",
-            "TRY ラーゲリより愛を込めて\n",
-            "TRY 非常宣言\n",
-            "TRY かがみの孤城\n",
-            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "TRY ブラックナイトパレード\n",
-            "TRY 嘘八百　なにわ夢の陣\n",
-            "TRY ONE PIECE FILM RED\n",
-            "TRY トップガン　マーヴェリック\n",
-            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "TRY かぐや様は告らせたい　ファーストキッスは終わらない\n",
-            "*********************************************\n",
-            "GET INFO from /100201/3230/\n",
-            "TRY 映画　イチケイのカラス\n",
-            "TRY そして僕は途方に暮れる\n",
-            "TRY THE FIRST SLAM DUNK\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
-            "TRY Dr.コトー診療所\n",
-            "TRY すずめの戸締まり\n",
-            "TRY ラーゲリより愛を込めて\n",
-            "TRY 非常宣言\n",
-            "TRY 月の満ち欠け\n",
-            "TRY ブラックナイトパレード\n",
-            "TRY ONE PIECE FILM RED\n",
-            "TRY RRR\n",
-            "TRY 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
-            "TRY 中島みゆき　劇場版　ライヴ・ヒストリー2\n",
-            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "*********************************************\n",
-            "GET INFO from /100201/3231/\n",
-            "TRY 映画　イチケイのカラス\n",
-            "TRY そして僕は途方に暮れる\n",
-            "TRY JSB3 LIVE FILM RISING SOUND\n",
-            "TRY ひみつのなっちゃん。\n",
-            "TRY ゲキ×シネ「神州無頼街」\n",
-            "TRY 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
-            "TRY THE FIRST SLAM DUNK\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
-            "TRY Dr.コトー診療所\n",
-            "TRY すずめの戸締まり\n",
-            "TRY ラーゲリより愛を込めて\n",
-            "TRY 非常宣言\n",
-            "TRY かがみの孤城\n",
-            "TRY 月の満ち欠け\n",
-            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "TRY ブラックナイトパレード\n",
-            "TRY ファミリア\n",
-            "TRY ONE PIECE FILM RED\n",
-            "TRY ホイットニー・ヒューストン I WANNA DANCE WITH SOMEBODY\n",
-            "TRY 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
-            "TRY 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "TRY Dream Collaboration Festival ドリコラFes. アイカツ！シリーズ＆プリティーシリーズ\n",
-            "TRY 劇場版　うたの☆プリンスさまっ♪　マジLOVEスターリッシュツアーズ\n"
-          ]
-        }
-      ],
-      "source": [
+        "  return obj\n",
+        "\n",
+        "\n",
         "#import json\n",
         "\n",
         "theaters = list(map(lambda name: {\n",
@@ -209,29 +250,18 @@
         "    \"movies\": getMoviesFromEiga(prefURL, paths[name]),\n",
         "}, paths.keys()))\n",
         "\n",
-        "# print (json.dumps(theaters, ensure_ascii=False))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# print (json.dumps(theaters, ensure_ascii=False))\n",
+        "\n",
+        "\n",
         "# 認証のためのコード\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "import gspread\n",
         "from google.auth import default\n",
         "creds, _ = default()\n",
-        "gc = gspread.authorize(creds)"
-      ],
-      "metadata": {
-        "id": "NxJZ7zXMUmTq"
-      },
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "gc = gspread.authorize(creds)\n",
+        "\n",
+        "\n",
         "import datetime\n",
         "\n",
         "ss = gc.open_by_key(ssID)\n",
@@ -244,7 +274,7 @@
         "# 日時１つを１行として書き込み\n",
         "for theater in theaters:\n",
         "  print(\"*********************************************\")\n",
-        "  print(f'THEATER: {theater[\"name\"]}')\n",
+        "  print(f'*** THEATER: {theater[\"name\"]} ***')\n",
         "\n",
         "  for movie in theater[\"movies\"]:\n",
         "    print(f'MOVIE: {movie[\"name\"]}')\n",
@@ -258,7 +288,7 @@
         "        dtEnd = dt + datetime.timedelta(minutes = int(movie[\"time\"]) + 10)\n",
         "        dateStr = dt.strftime('%Y/%m/%d')\n",
         "        timeStartStr = dt.strftime('%H:%M:%S')\n",
-        "        timeStartStrAbout = dt.strftime('%H時台(%p)')\n",
+        "        timeStartStrAbout = dt.strftime('%p%H時台')\n",
         "        timeEndStr = dtEnd.strftime('%H:%M:%S')\n",
         "\n",
         "        # 書き込みデータ\n",
@@ -276,84 +306,23 @@
         "        sheet.update_cells(ds)\n",
         "\n",
         "        row = row + 1\n"
-      ],
-      "metadata": {
-        "id": "GDn6Jr9GU46I",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "208a08f4-e532-4d79-e61e-f088b69749f0"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "*********************************************\n",
-            "THEATER: ユナイテッド・シネマ 前橋\n",
-            "MOVIE: 映画　イチケイのカラス\n",
-            "MOVIE: そして僕は途方に暮れる\n",
-            "MOVIE: JSB3 LIVE FILM RISING SOUND\n",
-            "MOVIE: THE FIRST SLAM DUNK\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
-            "MOVIE: Dr.コトー診療所\n",
-            "MOVIE: すずめの戸締まり\n",
-            "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 非常宣言\n",
-            "MOVIE: かがみの孤城\n",
-            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "MOVIE: ブラックナイトパレード\n",
-            "MOVIE: 嘘八百　なにわ夢の陣\n",
-            "MOVIE: ONE PIECE FILM RED\n",
-            "MOVIE: トップガン　マーヴェリック\n",
-            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "MOVIE: かぐや様は告らせたい　ファーストキッスは終わらない\n",
-            "*********************************************\n",
-            "THEATER: 109シネマズ高崎\n",
-            "MOVIE: 映画　イチケイのカラス\n",
-            "MOVIE: そして僕は途方に暮れる\n",
-            "MOVIE: THE FIRST SLAM DUNK\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
-            "MOVIE: Dr.コトー診療所\n",
-            "MOVIE: すずめの戸締まり\n",
-            "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 非常宣言\n",
-            "MOVIE: 月の満ち欠け\n",
-            "MOVIE: ブラックナイトパレード\n",
-            "MOVIE: ONE PIECE FILM RED\n",
-            "MOVIE: RRR\n",
-            "MOVIE: 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
-            "MOVIE: 中島みゆき　劇場版　ライヴ・ヒストリー2\n",
-            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "*********************************************\n",
-            "THEATER: イオンシネマ高崎\n",
-            "MOVIE: 映画　イチケイのカラス\n",
-            "MOVIE: そして僕は途方に暮れる\n",
-            "MOVIE: JSB3 LIVE FILM RISING SOUND\n",
-            "MOVIE: ひみつのなっちゃん。\n",
-            "MOVIE: ゲキ×シネ「神州無頼街」\n",
-            "MOVIE: 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
-            "MOVIE: THE FIRST SLAM DUNK\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
-            "MOVIE: Dr.コトー診療所\n",
-            "MOVIE: すずめの戸締まり\n",
-            "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 非常宣言\n",
-            "MOVIE: かがみの孤城\n",
-            "MOVIE: 月の満ち欠け\n",
-            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "MOVIE: ブラックナイトパレード\n",
-            "MOVIE: ファミリア\n",
-            "MOVIE: ONE PIECE FILM RED\n",
-            "MOVIE: ホイットニー・ヒューストン I WANNA DANCE WITH SOMEBODY\n",
-            "MOVIE: 劇場版　転生したらスライムだった件　紅蓮の絆編\n",
-            "MOVIE: 仮面ライダーギーツ×リバイス MOVIE バトルロワイヤル\n",
-            "MOVIE: Dream Collaboration Festival ドリコラFes. アイカツ！シリーズ＆プリティーシリーズ\n",
-            "MOVIE: 劇場版　うたの☆プリンスさまっ♪　マジLOVEスターリッシュツアーズ\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNZ32c2Mw5Eg1rR991ccbxm",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
